--- a/single.html
+++ b/single.html
@@ -133,8 +133,8 @@
 
   <!-- header ends here-->
   <!-- image background and program introduction-->
-  <section class="programs-detail-section bg-gray-800 bg-center bg-cover  w-full text-white">
-    <div class="w-full h-full header-bg opacity-70 py-12 md:py-24  px-2 md:px-14  ">
+  <section class="programs-detail-section bg-center bg-cover  w-full text-white backdrop-opacity-60 backdrop-invert bg-white/30">
+    <div class="w-full h-full py-12 md:py-24  px-2 md:px-14">
           <div class="md:pt-14 md:px-10  xl:px-32 ">
               <div class="w-full text-white ">  
                   <div class="text-4xl garamond md:text-8xl animate__animated animate__fadeIn animate__slow animate__delay-1s tracking-tight">
@@ -152,14 +152,14 @@
   <div class="flex flex-col justify-center mx-auto items-center h-full px-6 md:px-16 lg:px-24 xl:px-32">
         <div class="w-full md:w-11/12 h-max mb-4 mt-0 p-4 bg-white italic" style="font-size: 12px;">
          
-            <span class="md:hidden mb-4 font-light"><i class="fa fa-home px-2"></i><span class="label"></span>/ <span class="content-topic"></span>
+            <span class="md:hidden mb-4 font-light"><i class="fa fa-home px-2 text-yellow-600"></i><span class="label"></span>/ <span class="content-topic"></span>
             </span> 
            <div class="flex items-center justify-between">
-            <span class=""><i class="fa fa-pen px-2"></i><span class="published"></span></span>
-            <span class="hidden md:block font-light"><i class="fa fa-home px-2"></i><span class="d-label"></span>/ <span class="d-content-topic"></span>
+            <span class=""><i class="fa fa-pen px-2 text-yellow-600"></i><span class="published"></span></span>
+            <span class="hidden md:block font-light"><i class="fa fa-home px-2 text-yellow-600"></i><span class="d-label"></span>/ <span class="d-content-topic"></span>
         </span> 
             <span class="">
-                <i class="fa fa-user px-2"></i><span class="postwriter"></span>
+                <i class="fa fa-user px-2 text-yellow-600"></i><span class="postwriter"></span>
             </span>
             </div>
         </div>
