--- a/single.html
+++ b/single.html
@@ -179,7 +179,7 @@
   <!-- Publications -->
   <main class="py-10 md:py-20 px-2.5 md:px-5 text-black text-sm md:text-3xl leading-5 md:leading-10 text-justify">
     
-    <div class="pt-10 tracking-tight blog-content">
+    <div class="pt-10 tracking-tight blog-content font-sans leading-2 tracking-wide">
 
     </div>
   </main>
