--- a/single.html
+++ b/single.html
@@ -36,7 +36,8 @@
   <!--Web fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital@1&display=swap" rel="stylesheet">
-  <link rel="icon" href="" type="image/x-icon">
+  <link rel="icon" id="title-fav" type="image/x-icon">
+
   <title id="title-h"></title>
   <style>
     img{
