little changes made

--- a/legalbit.html
+++ b/legalbit.html
@@ -38,18 +38,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital@1&display=swap" rel="stylesheet">
   <title>Solace Chambers, BUK </title>
   <style>
-    /*font size*/
-      {}
-
-    .tx-lg {}
-
    
     /* Background image for homepage: mobile and desktop*/
     @media (max-width:699px) {
             .programs-detail-section {
                 background-image: url('https://i.ibb.co/Kc5Z4DzQ/istockphoto-135341581-612x612.jpg');
                 height: 30vh;
-                center/cover no-repeat;
                 color: white;
                 text-align: center;
             }
@@ -58,7 +52,6 @@
             .programs-detail-section {
                 background-image: url('https://i.ibb.co/Kc5Z4DzQ/istockphoto-135341581-612x612.jpg');
                 height: 25vh;
-                center/cover no-repeat;
                 color: white;
                 text-align: center;
             }
@@ -76,9 +69,9 @@
        <!-- Navigation menu -->
            <div class="flex justify-center py-2.5 md:py-6">
              <div class=" my-auto ">
-               <img class="h-16 md:h-28" src="https://i.ibb.co/ckKpptZ/SOLACE-CHAMBERS-LOGO-PNG.png" alt="logo" style=" ">
+               <img class="h-16 md:h-28" src="https://i.ibb.co/ckKpptZ/SOLACE-CHAMBERS-LOGO-PNG.png" alt="logo">
              </div>
-         <h1 class="uppercase pl-2 leading-5 font-bold my-auto " style="font-family: "> <span class="text-2xl tracking-wider md:text-6xl md:tracking-widest"> Solace Chambers </span> <br> <span class="text-lg md:text-5xl tracking-wide md:tracking-wi"> Bayero University, Kano </span> </h1>
+         <h1 class="uppercase pl-2 leading-5 font-bold my-auto"> <span class="text-2xl tracking-wider md:text-6xl md:tracking-widest"> Solace Chambers </span> <br> <span class="text-lg md:text-5xl tracking-wide md:tracking-wi"> Bayero University, Kano </span> </h1>
        </div>
        </header>
     
@@ -143,7 +136,7 @@
                 </div>-->
                 <div
                     class="text-4xl garamond md:text-8xl animate__animated animate__fadeIn animate__slow animate__delay-1s tracking-tight">
-                    <span class="block leading-none font-semibold ">Weeekly Legal Bit </span> 
+                    <span class="block leading-none font-semibold ">Weekly Legal Bit </span> 
                   <p class="text-sm md:text-2xl italic mt-3 tracking-wide"> A Weekly Legal Publication of the Chambers</p>
                     
                     </div>
@@ -180,9 +173,9 @@
     <main class="reachout-section py-10 md:py-32 bg-gray-200" id="contact">
       <h2 class="text-3xl md:text-5xl font-bold text-center"> Reach out to Us </h2>
       <p class="text-sm text-center md:text-2xl mt-3 mb-6 md:mb-12 md:mt-8 px-2 md:px-10"> For Partnerhip & Sponsorship</p>
-      <section data-aos="fade-up" class="mx-10 md:mx-20 px-8 py-8 bg-white rounded-lg" style="background-color: ; ">
+      <section data-aos="fade-up" class="mx-10 md:mx-20 px-8 py-8 bg-white rounded-lg">
         <div class=" ">
-          <form class="  " action="https://formspree.io/f/xeoalkll" method="POST" style="width: ">
+          <form class="  " action="https://formspree.io/f/xeoalkll" method="POST">
             <!--<label class="inline-block text-sm md:text-3xl font-semibold text-justify justify-between text-black hover:border-yellow-500" style="">      </label>-->
             <div class="flex items-center justify-center">
               <input class="shadow-lg  py-2.5 px-2 md:px-4 border-1 text-black border-gray-300 inline-block text-sm md:text-2xl" type="email" name="email" placeholder="your@email.com" style="width: 90vw; height:7vh">
@@ -270,7 +263,7 @@
       </article>
       <!-- horizontal line-->
       <div class="px-8 my-14">
-        <hr style="background-color: " class="bg-gray-800 font-light ">
+        <hr class="bg-gray-800 font-light ">
       </div>
 
 
