--- a/news.html
+++ b/news.html
@@ -181,9 +181,9 @@
     <main class="reachout-section py-10 md:py-32 bg-gray-200" id="contact">
       <h2 class="text-3xl md:text-5xl font-bold text-center"> Reach out to Us </h2>
       <p class="text-sm text-center md:text-2xl mt-3 mb-6 md:mb-12 md:mt-8 px-2 md:px-10"> For Partnerhip & Sponsorship</p>
-      <section data-aos="fade-up" class="mx-10 md:mx-20 px-8 py-8 bg-white rounded-lg" style="background-color: ; ">
+      <section data-aos="fade-up" class="mx-10 md:mx-20 px-8 py-8 bg-white rounded-lg">
         <div class=" ">
-          <form class="  " action="https://formspree.io/f/xeoalkll" method="POST" style="width: ">
+          <form class="  " action="https://formspree.io/f/xeoalkll" method="POST">
             <!--<label class="inline-block text-sm md:text-3xl font-semibold text-justify justify-between text-black hover:border-yellow-500" style="">      </label>-->
             <div class="flex items-center justify-center">
               <input class="shadow-lg  py-2.5 px-2 md:px-4 border-1 text-black border-gray-300 inline-block text-sm md:text-2xl" type="email" name="email" placeholder="your@email.com" style="width: 90vw; height:7vh">
@@ -270,7 +270,7 @@
       </article>
       <!-- horizontal line-->
       <div class="px-8 my-14">
-        <hr style="background-color: " class="bg-gray-800 font-light ">
+        <hr class="bg-gray-800 font-light ">
       </div>
 
 
