Changes made by owner

--- a/legalbit.html
+++ b/legalbit.html
@@ -387,8 +387,11 @@ function formatDate(dateString) {
 
 
 
-
+ //copyright
+ document.addEventListener('DOMContentLoaded', function() {
+        var currentYear = new Date().getFullYear();
+        document.getElementById('copyright-year').textContent = currentYear;
+      });
     </script>
 </body>
-
 </html>
