--- a/programs.html
+++ b/programs.html
@@ -403,7 +403,11 @@
    startDelay: 2000,
  });
 
-
+ //copyright
+ document.addEventListener('DOMContentLoaded', function() {
+        var currentYear = new Date().getFullYear();
+        document.getElementById('copyright-year').textContent = currentYear;
+      });
     </script>
 </body>
 </html>
