--- a/single.html
+++ b/single.html
@@ -388,6 +388,12 @@ try {
     return new Date(dateString).toLocaleDateString('en-US', options);
   }
 
+
+   //copyright
+   document.addEventListener('DOMContentLoaded', function() {
+        var currentYear = new Date().getFullYear();
+        document.getElementById('copyright-year').textContent = currentYear;
+      });
     </script>
 </body>
 
