--- a/about.html
+++ b/about.html
@@ -509,7 +509,11 @@
 
 
 
-
+ //copyright
+ document.addEventListener('DOMContentLoaded', function() {
+        var currentYear = new Date().getFullYear();
+        document.getElementById('copyright-year').textContent = currentYear;
+      });
     </script>
 </body>
 
