--- a/archives.html
+++ b/archives.html
@@ -38,11 +38,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital@1&display=swap" rel="stylesheet">
   <title>Solace Chambers, BUK </title>
   <style>
-    /*font size*/
-      {}
-
-    .tx-lg {}
-
    
     /* Background image for homepage: mobile and desktop*/
     @media (max-width:699px) {
@@ -64,8 +59,6 @@
             }
         }
 
-
- 
   </style>
 </head>
 <!-- body starts here-->
@@ -144,7 +137,7 @@
                 <div
                     class="text-4xl garamond md:text-8xl animate__animated animate__fadeIn animate__slow animate__delay-1s tracking-tight">
                     <span class="block leading-none font-semibold "> Archives</span> 
-                  <p class="text-sm md:text-2xl italic mt-3 tracking-wide"> Get to have access to our Newsletter, Magazines, Legal Bits Compedium etc</p>
+                  <p class="text-sm md:text-2xl italic mt-3 tracking-wide"> A showcase of our Newsletter, Magazines, Legal Bits Compedium etc</p>
                     
                     </div>
         
@@ -156,7 +149,7 @@
   <!--<h1 class="text-xs md:text-2xl pt-2 px-2 text-gray-500 mb-4"> <a href="../my.html" class=""> Home </a> | <a class="" href=" "> Publications</a></h1>-->
   <div class="">
   <button class="bg-yellow-600 text-center text-base text-white py-1 md:text-3xl uppercase px-2 garamond font-bold"> about:</button>
-  <p class="text-sm md:text-4xl my-4 md:my-12 text-center px-2"> you have a great infraction the court pleases me a flyer and you are not available for other things that we have a very</p>
+  <p class="text-sm md:text-4xl my-4 md:my-12 text-center px-2"> Download, Read and Get Acccess to Our Outstanding Annual Solace Chambers Magazine, Solace Legal Bits Compedium Edition etc. </p>
   <p class="text-6xl md:text-9xl text-center px-2 text-gray-800"> - - - - - </p>
 
   </div>
@@ -165,7 +158,7 @@
    <!--publication samples grid-->
    <article class="grid grid-cols-1 md:grid-cols-1 gap-4 mt-6 md:mt-12 px-4 md:px-10 mx-auto py-10 ">
         <!-- news letter 1.0 -->
-     <div data-aos="fade-up" class="md:grid-span-2 bg-white w-full rounded-lg mb-10 border border-gray-50 shadow-lg">
+     <div data-aos="fade-up" class="md:grid-span-2 bg-white w-full rounded-lg mb-10 border border-gray-50 shadow-lg hidden">
        <!--<div class="md:w-full overflow-hidden rounded-t">
          <img src="https://i.ibb.co/TYVjVdM/1674711726455563-0.jpg" alt="publication caption" class="w-full h-full object-cover object-center">
        </div>-->
@@ -317,7 +310,7 @@
       </article>
       <!-- horizontal line-->
       <div class="px-8 my-14">
-        <hr style="background-color: " class="bg-gray-800 font-light ">
+        <hr class="bg-gray-800 font-light ">
       </div>
 
 
@@ -337,7 +330,7 @@
       <!-- copyright-->
       <div class="mt-10 md:mt-20 text-gray-400 text-center px-2 md:px-5 text-sm md:text-2xl font-normal">
         <p class=" text-center"> Solace Chambers, BUK <i class="fab fa-at"> </i> <span class="" id="copyright-year"></span> </p>
-        <p class=""> All Rights Reserved</p>
+        <p class=""> All Rights Reserved</script></p>
         <p class=""> Designed by <a href=" https://wa.me/2349037074761?text=Hello!" class=" text-white font-light"> Al-Qosim </a> </p>
       </div>
 
@@ -360,7 +353,11 @@
 
 
 
-
+ //copyright
+ document.addEventListener('DOMContentLoaded', function() {
+        var currentYear = new Date().getFullYear();
+        document.getElementById('copyright-year').textContent = currentYear;
+      });
     </script>
 </body>
 
