--- a/poetrylines.html
+++ b/poetrylines.html
@@ -390,7 +390,11 @@ function formatDate(dateString) {
 
 
 
-
+ //copyright
+ document.addEventListener('DOMContentLoaded', function() {
+        var currentYear = new Date().getFullYear();
+        document.getElementById('copyright-year').textContent = currentYear;
+      });
 
     </script>
 </body>
