--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Solace Chambers is the foremost Chamber within the Faculty of Law, Bayero University, Kano. It is renowned for its exceptional commitment towards nurturing its members in various aspects of law and legal practice, particularly in terms of litigation and other legal proceedings.">
   <meta name="keywords" content=" Solace Chambers; All are Equal before the Law! ">
   <meta name="author" content="Solace Chambers, Bayero University, Kano">
+  
   <!-- tailwind-->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.1.2/dist/tailwind.min.css" rel="stylesheet">
@@ -19,7 +20,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/fontawesome.min.css" integrity="sha512-xX2rYBFJSj86W54Fyv1de80DWBq7zYLn2z0I9bIhQG+rxIF6XVJUpdGnsNHWRa6AvP89vtFupEPDP8eZAtu9qA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- otg -->
   <meta property="og:image" content="https://muhibqosim.github.io/solace-buk/img/solace-logo.jpg ">
-  <meta property="og:url" content="https://muhibqosim.github.io/solace-buk/index.html">
+  <!--<meta property="og:url" content="https://muhibqosim.github.io/solace-buk/index.html">-->
+  <meta property="og:url" content="https://solacechambersbuk.com.ng">
 
   <!--<script src="https://cdn.tailwindcss.com"></sscript-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
