--- a/archives.html
+++ b/archives.html
@@ -160,7 +160,7 @@
    <!--publication samples grid-->
    <article class="grid grid-cols-1 md:grid-cols-1 gap-4 mt-6 md:mt-12 px-4 md:px-10 mx-auto py-10 ">
         <!-- news letter 1.0 -->
-     <div data-aos="fade-up" class="md:grid-span-2 bg-white w-full rounded-lg mb-10 border border-gray-50 shadow-lg hidden">
+     <div data-aos="fade-up" class="md:grid-span-2 bg-white w-full rounded-lg mb-10 border border-gray-50 shadow-lg ">
        <!--<div class="md:w-full overflow-hidden rounded-t">
          <img src="https://i.ibb.co/TYVjVdM/1674711726455563-0.jpg" alt="publication caption" class="w-full h-full object-cover object-center">
        </div>-->
@@ -170,7 +170,7 @@
        
          <p class="text-sm mt-4 md:text-2xl tracking-tight "> </p>
        </div>
-       <a href="#" class="block text-sm md:text-3xl mt-9 md:mt-18 text-center bg-yellow-500 bg-gradient-to-br from-yellow-600 to-yellow-400   shadow-lg text-white py-2 md:py-8 font-semibold "> DOWNLOAD NOW  <i class=" fas fa-arrow-down"> </i></a>
+       <a href="https://drive.google.com/file/d/1qRoWdh-lA3isEOybr9dEEsmjyok41Lmm/view?usp=drive_link" class="block text-sm md:text-3xl mt-9 md:mt-18 text-center bg-yellow-500 bg-gradient-to-br from-yellow-600 to-yellow-400   shadow-lg text-white py-2 md:py-8 font-semibold "> DOWNLOAD NOW  <i class=" fas fa-arrow-down"> </i></a>
      </div>
  
      
