--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initinitial-scale">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Solace Chambers is the foremost Chamber within the Faculty of Law, Bayero University, Kano. It is renowned for its exceptional commitment towards nurturing its members in various aspects of law and legal practice, particularly in terms of litigation and other legal proceedings.">
+  <meta name="description" content="Solace Chambers is the foremost Chambers within the Faculty of Law, Bayero University, Kano. It is renowned for its exceptional commitment towards nurturing its members in various aspects of law and legal practice, particularly in terms of litigation and other legal proceedings.">
   <meta name="keywords" content=" Solace Chambers; All are Equal before the Law! ">
   <meta name="author" content="Solace Chambers, Bayero University, Kano">
   <!--favicon-->
@@ -188,7 +188,7 @@
       <img src="https://i.ibb.co/0KZ3qqn/istockphoto-656514904-612x612.jpg" alt="istockphoto-656514904-612x612" border="2px #fff solid" style="border-radius:100%; ">
     </div>
     <article data-aos="fade-down" class="mt-7 text-sm md:text-3xl leading-7 md:leading-10 text-justify tracking-tight">
-      <p class="mt-3 text-tighter"> Solace Chambers is the foremost Chamber within the Faculty of Law, Bayero University, Kano. It is renowned for its exceptional commitment towards nurturing its members in various aspects of law and legal practice, particularly in terms of litigation and other legal proceedings. </p>
+      <p class="mt-3 text-tighter"> Solace Chambers is the foremost Chambers within the Faculty of Law, Bayero University, Kano. It is renowned for its exceptional commitment towards nurturing its members in various aspects of law and legal practice, particularly in terms of litigation and other legal proceedings. </p>
       <p class=" mt-3 "> One of the major features of Solace Chambers which distinguishes it from other Chambers is its innovative approach towards members development; utilising online webinars, physical sessions, and other training methods to ensure that its members obtain comprehensive and up-to-date knowledge and legal skills required of a budding lawyer. By leveraging on digital platforms, Solace Chambers has successfully adapted to the evolving needs of the 21st century legal profession, offering convenient and accessible opportunities to students of law.</p>
       <p class=" mt-3 ">The success of Solace Chambers is reflected in its impressive track record having produced distinguished individuals who have achieved prominence in the legal profession. These accomplishments are but testament to the Chamber's commitment towards excellence and its ability to equip its members with the necessary tools for professional success. </p>
     </article>
@@ -671,7 +671,7 @@
         <div class="">
           <h2 class="text-white text-xl md:text-4xl font-bold mb-2.5 "> About Us </h2>
           <hr class="bg-gray-400 h-1 font-bold w-9 ">
-          <p class="text-sm md:text-2xl font-light text-white tracking-tight mt-8 text-justify"> Solace Chambers is a student-based Chambers domiciled in the Faculty of Law, Bayero University, Kano (BUK). The Chamber is committed to equipping student-members with the prerequisite skills of legal research, legal writing, moot court advocacy, career development, among others. </p>
+          <p class="text-sm md:text-2xl font-light text-white tracking-tight mt-8 text-justify"> Solace Chambers is a student-based Chambers domiciled in the Faculty of Law, Bayero University, Kano (BUK). The Chambers is committed to equipping student-members with the prerequisite skills of legal research, legal writing, moot court advocacy, career development, among others. </p>
           <!-- social handles-->
           <div class="mt-9 md:mt-8 text-4xl md:text-5xl tracking-widest">
             <a href="https://www.facebook.com/profile.php?id=100092506571508" class="text-white hover:text-blue-600" target="_blank" rel="noopener" title="Facebook" class="pr-4"> <i class="fab fa-facebook "></i></a>
