--- a/legalbit.html
+++ b/legalbit.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="eng">
-
-<head>
+<head> 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initinitial-scale">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Solace Chambers is the foremost Chamber within the Faculty of Law, Bayero University, Kano. It is renowned for its exceptional commitment towards nurturing its members in various aspects of law and legal practice, particularly in terms of litigation and other legal proceedings.">
+  <meta name="description" content="Browse our Weekly Legal Bit publications which features weekly publications of legal nuggets by the Chambers Research and Litigation Directorate. It provides concise and informative insights into recent decisions of the Nigerian Courts — the Supreme Court and the Court of Appeal.">
   <meta name="keywords" content=" Solace Chambers; All are Equal before the Law! ">
   <meta name="author" content="Solace Chambers, Bayero University, Kano">
   <!--favicon-->
