--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initinitial-scale">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Solace Chambers is the foremost Chamber within the Faculty of Law, Bayero University, Kano. It is renowned for its exceptional commitment towards nurturing its members in various aspects of law and legal practice, particularly in terms of litigation and other legal proceedings.">
+  <meta name="description" content="Get to Know More About Solace Chambers! At Solace, we are deeply committed to raising the standard and competence of our members by fostering an environment rich in mentorship, growth, and opportunity. We remain open to sponsorships and partnerships that align with our vision of excellence and impact.">
   <meta name="keywords" content=" Solace Chambers; All are Equal before the Law! ">
   <meta name="author" content="Solace Chambers, Bayero University, Kano">
   
@@ -170,7 +170,7 @@
 <div class="hidden bg-white " id="who-we-are" role="tabpanel" aria-labelledby="all-tab">
 <div class="mt-5 md:py-20 px-8 mb-8 ">
      <h3 class="uppercase font-bold text-2xl md:text-5xl mb-2.5 text-center"> who we are</h3>
-     <p data-aos="fade-up" class="italic px-3 text-sm text-center md:text-3xl font-light mb-4"> Committed to improving the standard and competence of our members while providing doors for mentorships and opportunities. Opened to sponsorship and partnership.</p>
+     <p data-aos="fade-up" class="italic px-3 text-sm text-center md:text-3xl font-light mb-4"> At Solace, we are deeply committed to raising the standard and competence of our members by fostering an environment rich in mentorship, growth, and opportunity. We remain open to sponsorships and partnerships that align with our vision of excellence and impact.</p>
 </div>
 <!-- mission statement -->
 <div data-aos="fade-up" class="bg-gray-100 mx-2 px-1 py-5 text-justify">
