--- a/programs.html
+++ b/programs.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initinitial-scale">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Solace Chambers is the foremost Chamber within the Faculty of Law, Bayero University, Kano. It is renowned for its exceptional commitment towards nurturing its members in various aspects of law and legal practice, particularly in terms of litigation and other legal proceedings.">
+  <meta name="description" content="Explore some of our most distinguished initiatives — bold steps that not only define us, but also reflect our enduring commitment to legal excellence and leadership.">
   <meta name="keywords" content=" Solace Chambers; All are Equal before the Law! ">
   <meta name="author" content="Solace Chambers, Bayero University, Kano">
   <!--favicon-->
