--- a/archives.html
+++ b/archives.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initinitial-scale">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Download, Read and Get Acccess to Our Outstanding Annual Solace Chambers Magazine, Solace Legal Bits Compedium Edition etc. ">
+  <meta name="keywords" content=" Solace Chambers; All are Equal before the Law! ">
   <meta name="author" content="Solace Chambers, Bayero University, Kano">
   <!--favicon--> 
 <link rel="shortcut icon" href="https://i.ibb.co/4wG3NVtp/SOLACE-CHAMBERS-LOGO-PNG-1.jpg" type="image/x-icon">
