--- a/archives.html
+++ b/archives.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="eng">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initinitial-scale">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Download, Read and Get Acccess to Our Outstanding Annual Solace Chambers Magazine, Solace Legal Bits Compedium Edition etc. ">
+  <meta name="description" content="Get to Know More About Solace Chambers! At Solace, we are deeply committed to raising the standard and competence of our members by fostering an environment rich in mentorship, growth, and opportunity. We remain open to sponsorships and partnerships that align with our vision of excellence and impact.">
   <meta name="keywords" content=" Solace Chambers; All are Equal before the Law! ">
   <meta name="author" content="Solace Chambers, Bayero University, Kano">
   <!--favicon--> 
