--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="eng">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initinitial-scale">
@@ -22,6 +21,23 @@
   <!-- otg -->
   <meta property="og:image" content="https://muhibqosim.github.io/solace-buk/img/solace-logo.jpg ">
   <meta property="og:url" content="https://muhibqosim.github.io/solace-buk/index.html">
+
+<!-- gggggg-->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Solace Chambers, Faculty of Law, Bayero University, Kano",
+  "url": "https://solacechambersbuk.com.ng",  
+  "logo": "https://muhibqosim.github.io/solace-buk/img/solace-logo.jpg ",  
+  "sameAs": [
+    "https://www.facebook.com/profile.php?id=100092506571508",
+    "https://www.instagram.com/solace_chambers_buk/",
+    "https://x.com/Solacechamber?t=0fg1FTwOb63PkasDn_cQWw&s=09"
+    "https://www.linkedin.com/company/solace-chambers-bayero-university-kano/"
+  ]
+}
+</script>
 
   <!--<script src="https://cdn.tailwindcss.com"></sscript-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
