--- a/index.html
+++ b/index.html
@@ -196,6 +196,52 @@
       </div>
     </div>
   </div>
+  
+  <!-- Solace NWLR Login -->
+  <section class="py-14 bg-gray-100 px-4">
+    <div class="" data-aos="fade-up">
+      <h1 class="text-center text-3xl md:text-4xl mt-1 font-bold ">  Solace NWLR Login </h1>
+      <p class="text-dark-500 text-center text-sm md:text-2xl mt-3 tracking-tight"> Looking for Free NWLR Login Details? Here is Solace NWLR Login Details. </p>
+    </div>
+
+    <!-- modal flowbite-->
+
+    <div id="gallery" class="mt-10 relative w-full" data-carousel="slide">
+      <!-- Carousel wrapper -->
+      <div class="relative h-96 overflow-hidden rounded-lg md:h-100">
+        <!-- NWLR Flyer -->
+        <div data-modal-target="defaultModal" data-modal-toggle="firstModal" class="hidden duration-700 ease-in-out" data-carousel-item>
+          <img src="https://i.ibb.co/KxyGW9Xg/IMG-20250902-WA0001.jpg" class="absolute block w-full h-96 md:h-100 -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 hover:" alt="Solace Free NWLR Subscription">
+         <!-- <div class="overlay absolute top-0 left-0 w-full h-full text-white bottom-0 left-0 pt-4 md:pt-10 px-4 mx-auto  "> -->
+            <!-- <p class="text-xs text-center bg-gray-900 opacity-60"> <i> Receiving the Award of Executive of the year, 2022/2023 session, Solace Chambers presented by Halimah Ummi Usmail, SABUK. </i> </p>  
+          </div> -->   
+        </div>
+        
+      </div>
+
+      <!-- Slider controls -->
+      <button type="button" class="absolute top-0 left-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
+        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+          <svg class="w-4 h-4 text-white dark:text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4" />
+          </svg>
+          <span class="sr-only">Previous</span>
+        </span>
+      </button>
+      <button type="button" class="absolute top-0 right-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
+        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+          <svg class="w-4 h-4 text-white dark:text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4" />
+          </svg>
+          <span class="sr-only">Next</span>
+        </span>
+      </button>
+
+
+  </section>
+  <!-- bg distance -->
+  <div class="py-2.5 bg-white md:py-3"> </div>
+
 
   <!-- Who we are-->
   <section class="py-12 px-4 bg-white">
