--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <nav class="header-bg">
     <div class="mx-auto  px-4 md:px-8">
       <div class="flex justify-between">
-        <div class="flex tracking-widest py-2 md:py-3 md:text-2xl text-xl md:text-6xl my-auto ">
+        <div class="flex tracking-widest py-2 md:py-3 md:text-2xl text-xl my-auto ">
           <a href="https://www.facebook.com/profile.php?id=100092506571508" class="text-white hover:text-blue-600 px-1 md:px-2.5" target="_blank" rel="noopener" title="Facebook"> <i class="fab fa-facebook "></i></a>
           <!--<a href="https://wa.me/2349037074761?text=Hello!" class="text-white hover:text-green-500 px-1" target="_blank" rel="noopener" title="WhatsApp">
         <i class="fab fa-whatsapp"></i></a>-->
