--- a/index.html
+++ b/index.html
@@ -427,7 +427,6 @@
           </div>
           <div class="flex my-5 justify-center items-center px-2 ">
             <button class="inline-block animate-float-in-from-bottom text-white font-bold text-center btn  rounded-lg uppercase text-base md:text-base md:px-7 md:py-3 px-5 py-2 text-lg font-extrabold bg-yellow-500 bg-gradient-to-br from-yellow-600 to-yellow-400   shadow-lg tracking-wider "> <a class="text-white" href="programs.html"> Read more <i class=" font-bold text-red-600"> </i> </a> </button>
-
           </div>
         </div>
 </section>
@@ -443,27 +442,27 @@
     <section class="bg-gray-100 py-20 md:py-32 px-4" id="publications">
         <div class="mb-14" data-aos="fade-down">
           <h2 class="text-center text-2xl md:text-3xl uppercase tracking-wider font-bold"> News & Publications</h2>
-          <h6 class="text-center text-xs md:text-xl mb-5 font-light mt-1 md:mt-6"> Read and digest our periodic publications.</h6>
+          <h6 class="text-center text-xs md:text-base mb-5 font-light mt-1 md:mt-6"> Read and digest our periodic publications.</h6>
         </div>
       <div class="mb-4 border-b border-gray-200 dark:border-gray-700 md:text-xl">
-        <ul class="flex flex-wrap -mb-px text-sm font-medium text-center md:text-xl text-center " id="default-tab" data-tabs-toggle="#default-tab-content" role="tablist">
+        <ul class="flex flex-wrap -mb-px text-sm font-medium text-center md:text-xl  flex items-center justify-center" id="default-tab" data-tabs-toggle="#default-tab-content" role="tablist">
             <li class="me-2" role="presentation">
-                <button class="inline-block p-4 border-b-2 rounded-t-lg" id="All-tab" data-tabs-target="#All" type="button" role="tab" aria-controls="All" aria-selected="false">All</button>
+                <button class="inline-block p-4 md:px-8 border-b-2 rounded-t-lg" id="All-tab" data-tabs-target="#All" type="button" role="tab" aria-controls="All" aria-selected="false">All</button>
             </li>
             <li class="me-2" role="presentation">
-                <button class="inline-block p-4 border-b-2 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="News-tab" data-tabs-target="#News" type="button" role="tab" aria-controls="News" aria-selected="false">News</button>
+                <button class="inline-block p-4 border-b-2 md:px-8 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="News-tab" data-tabs-target="#News" type="button" role="tab" aria-controls="News" aria-selected="false">News</button>
             </li>
             <li class="me-2" role="presentation">
-                <button class="inline-block p-4 border-b-2 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="Legalbit-tab" data-tabs-target="#Legalbit" type="button" role="tab" aria-controls="Legalbit" aria-selected="false">Legal bit</button>
+                <button class="inline-block p-4 border-b-2 md:px-8 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="Legalbit-tab" data-tabs-target="#Legalbit" type="button" role="tab" aria-controls="Legalbit" aria-selected="false">Legal bit</button>
             </li>
             <li role="presentation">
-                <button class="inline-block p-4 border-b-2 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="Poetrylines-tab" data-tabs-target="#Poetrylines" type="button" role="tab" aria-controls="Poetrylines" aria-selected="false">Poetry Lines</button>
+                <button class="inline-block p-4 border-b-2 rounded-t-lg md:px-8 hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="Poetrylines-tab" data-tabs-target="#Poetrylines" type="button" role="tab" aria-controls="Poetrylines" aria-selected="false">Poetry Lines</button>
             </li>
         </ul>
     </div>
     <div id="default-tab-content">
-        <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="All" role="tabpanel" aria-labelledby="All-tab">
-          <div id="populate-All" class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-6 px-4 mx-auto"></div>
+        <div class="hidden p-4 bg-gray-50 dark:bg-gray-800" id="All" role="tabpanel" aria-labelledby="All-tab">
+          <div id="populate-All" class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-12 mt-6 md:mx-10 px-4 mx-auto"></div>
         </div>
         <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="News" role="tabpanel" aria-labelledby="News-tab">
           <div id="populate-News" class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-6 px-4 mx-auto"></div>
@@ -483,31 +482,30 @@
 <!-- ANOTHER GALLERY HERE -->
   <section class="bg-gray-50 py-10 md:py-44">
     <div class="mb-10">
-      <h2 class=" text-center uppercase font-bold text-2xl md:text-5xl "> gallery</h2>
+      <h2 class=" text-center uppercase font-bold text-2xl md:text-3xl "> gallery</h2>
       <h6 class="text-center text-xs md:text-base font-light mt-1 md:mt-6"> Get up with our past historical events.</h6>
     </div>
 
  <!-- Image Slider Container -->
-    <div class="relative w-full max-w-2xl overflow-hidden rounded-lg shadow-lg">
+    <div class="relative w-full overflow-hidden rounded-lg shadow-lg absolute block w-full h-96 md:h-100 md:px-64  ">
         <div id="gallery-slider" class="flex transition-transform duration-700">
             <!-- Images will be inserted here dynamically -->
         </div>
 
         <!-- Navigation Buttons -->
-        <button onclick="prevSlide()" class="absolute left-2 top-1/2 transform -translate-y-1/2 bg-black bg-opacity-50 text-white p-2 rounded-full">❮</button>
-        <button onclick="nextSlide()" class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-black bg-opacity-50 text-white p-2 rounded-full">❯</button>
+        <div class="md:px-64">
+        <button onclick="prevSlide()" class="absolute left-2 top-1/2 transform -translate-y-1/2 bg-black bg-opacity-50 text-white p-2 rounded-full md:mx-64">❮</button>
+        <button onclick="nextSlide()" class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-black bg-opacity-50 text-white p-2 rounded-full md:mx-64">❯</button>
+        </div>
     </div>
-
-
   </section>
-
 
 
     <!--------- BE A MEMBER-------->
     <section class="py-20 md:py-32 px-3 bg-white" id="membership-application">
-      <div class="">
+      <div class="md:px-16">
         <h2 class="text-2xl md:text-3xl text-center uppercase font-bold pt-"> Wants to be a Member? </h2>
-        <h6 class="text-xs md:text-lg text-center font-normal mt-3 text-red-500"> To be duly registered as a <i> bona fide </i> member of the Solace Chambers, Bayero University, Kano, kindly follow the procedure outlined below. </h6>
+        <h6 class="text-xs md:text-base text-center font-normal mt-3 text-red-500"> To be duly registered as a <i> bona fide </i> member of the Solace Chambers, Bayero University, Kano, kindly follow the procedure outlined below. </h6>
 
         <ol class="mt-5 text-xs md:text-xl text-justify list-disc px-4 tracking-tight">
           <li class=""> Purchase a membership form from your class representative. </li>
@@ -529,7 +527,6 @@
   <div class="container mx-auto px-6 text-center">
     <h2 class="text-3xl font-bold text-gray-800">Hear About Us</h2>
   <h6 class="text-xs md:text-lg text-center font-normal mt-3 text-red-500 mb-14"> Gladly listen to what our members say </h6>
-
 
     <!-- Swiper Container -->
     <div class="relative max-w-3xl mx-auto">
@@ -649,7 +646,7 @@
         </div>
 
         <!-- Navigation Buttons -->
-        <div class="swiper-button-next"></div>
+        <div class="swiper-button-next md:mt-10"></div>
         <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
       </div>
@@ -689,8 +686,8 @@
 
     <!-- Reach out to us -->
     <main class="reachout-section py-10 md:py-32 bg-gray-200" id="contact">
-      <h2 class="text-3xl md:text-5xl font-bold text-center"> Reach out to Us </h2>
-      <p class="text-sm text-center md:text-2xl mt-3 mb-6 md:mb-12 md:mt-8 px-2 md:px-10"> For Partnerhip & Sponsorship</p>
+      <h2 class="text-3xl md:text-3xl font-bold text-center"> Reach out to Us </h2>
+      <p class="text-sm text-center md:text-lg mt-3 mb-6 md:mb-12 md:mt-8 px-2 md:px-10"> For Partnerhip & Sponsorship</p>
       <section data-aos="fade-up" class="mx-10 md:mx-20 px-8 py-8 bg-white rounded-lg">
         <div class=" ">
           <form class="  " action="https://formspree.io/f/xeoalkll" method="POST" style="width: ">
@@ -704,7 +701,7 @@
             </div>
             <!-- your other form fields go here -->
             <div class="flex items-center justify-center">
-              <button class="text-center mt-5 px-4 py-2 text-lg md:text-4xl text-white font-bold uppercase  bg-yellow-500 bg-gradient-to-br from-yellow-600 to-yellow-400 shadow-lg" type="submit" style="width: 90vw; ">Send</button>
+              <button class="text-center mt-5 px-4 py-2 text-lg md:text-base text-white font-bold uppercase  bg-yellow-500 bg-gradient-to-br from-yellow-600 to-yellow-400 shadow-lg" type="submit" style="width: 90vw; ">Send</button>
             </div>
           </form>
         </div>
@@ -744,13 +741,14 @@
           </div>
         </div>
 
+
         <!--</div>-->
         <!-- Get in touch-->
         <div class="mt-12 md:mt-0  text-white">
-          <h2 class="text-white text-xl md:text-4xl font-bold mb-2.5 "> Get in Touch </h2>
+          <h2 class="text-white text-xl md:text-2xl font-bold mb-2.5 "> Get in Touch </h2>
           <hr class="bg-gray-400 h-1 font-bold w-9 ">
           <!-- address-->
-          <div class="text-sm md:text-2xl flex mt-5">
+          <div class="text-sm md:text-base flex mt-5">
             <div class=""> <i class="fas fa-location text-white text-3xl "> </i></div>
             <div class="">
               <h5 class="pl-5 font-bold"> Address: </h5>
@@ -758,7 +756,7 @@
             </div>
           </div>
           <!-- phone Number-->
-          <div class="text-sm md:text-2xl flex mt-5">
+          <div class="text-sm md:text-base flex mt-5">
             <div class=""> <i class="fas fa-phone text-white text-3xl "> </i></div>
             <div class="">
               <h5 class="pl-5 font-bold"> Phone Number: </h5>
@@ -787,24 +785,23 @@
 
       <!-- newsletter -->
       <div class="px-4">
-        <h4 class="uppercase text-white text-center text-base md:text-3xl mt-5 font-bold"> sign up for our newsletter</h4>
-        <p class="mt-1 text-sm md:text-2xl text-center font-light text-white">Stay up to date with our Weekly Legal Bit, News & Updatew and Poetry Lines </p>
+        <h4 class="uppercase text-white text-center text-base md:text-2xl mt-5 font-bold"> sign up for our newsletter</h4>
+        <p class="mt-1 text-sm md:text-base text-center font-light text-white">Stay up to date with our Weekly Legal Bit, News & Updatew and Poetry Lines </p>
       </div>
       <form action="subscribe.php" method="post" class=" mt-3 px-4 ">
         <div class="md:px-24">
-          <input type="email" name="email" placeholder="Enter your email" class="bg-white border border-gray-300 text-center rounded px-4 md:px-10 py-2 mr-2 focus:outline-none text-sm md:text-3xl w-full inline-block" required>
+          <input type="email" name="email" placeholder="Enter your email" class="bg-white border border-gray-300 text-center rounded px-4 md:px-10 py-2 mr-2 focus:outline-none text-sm md:text-base w-full inline-block" required>
         </div>
         <div class="flex items-center justify-center">
-          <button type="submit" class="inline-block bg-yellow-500 bg-gradient-to-br from-yellow-600 to-yellow-400 text-white font-semibold px-4 py-2 rounded mt-5 text-sm md:text-3xl uppercase flex justify-center items-center"> Subscribe &nbsp; <i class="far fa-paper-plane"> </i> </button>
+          <button type="submit" class="inline-block bg-yellow-500 bg-gradient-to-br from-yellow-600 to-yellow-400 text-white font-semibold px-4 py-2 rounded mt-5 text-sm md:text-base uppercase flex justify-center items-center"> Subscribe &nbsp; <i class="far fa-paper-plane"> </i> </button>
         </div>
       </form>
       <!-- copyright-->
-      <div class="mt-10 md:mt-20 text-gray-400 text-center px-2 md:px-5 text-sm md:text-2xl font-normal">
+      <div class="mt-10 md:mt-20 text-gray-400 text-center px-2 md:px-5 text-sm md:text-base font-normal">
         <p class=" text-center"> Solace Chambers, BUK <i class="fab fa-at"> </i> <span class="" id="copyright-year"></span> </p>
         <p class=""> All Rights Reserved</p>
         <p class=""> Designed by <a href="https://wa.me/2349037074761?text=Hello!" class="text-white font-light"> Al-Qosim </a></p>
       </div>
-
 
     </footer>
 
