--- a/index.html
+++ b/index.html
@@ -104,11 +104,9 @@
       60% {
         background-image: url(https://i.ibb.co/S7BNykMS/IMG-20240211-WA0011.jpg);
       }
-
       80% {
         background-image: url(https://i.ibb.co/Mk2bfkNy/IMG-20240211-WA0060.jpg);
       }
-
       100% {
         background-image: url(https://i.ibb.co/s2qVkzn/IMG-20230720-WA0028.jpg);
       }
@@ -129,7 +127,6 @@
        </div>
        </header>
     
-
     <!-- navigation bar-->
       <nav class="header-bg">
     <div class="mx-auto  px-4 md:px-8">
@@ -657,7 +654,7 @@
 <!-- Swiper JS -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-<!-- Initialize Swiper js script -->
+<!-- Testimonies Initialize Swiper js script -->
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     new Swiper(".testimonialSwiper", {
@@ -680,24 +677,23 @@
   });
 </script>
 
-
       </div>
     </section>
 
     <!-- Reach out to us -->
     <main class="reachout-section py-10 md:py-32 bg-gray-200" id="contact">
       <h2 class="text-3xl md:text-3xl font-bold text-center"> Reach out to Us </h2>
-      <p class="text-sm text-center md:text-lg mt-3 mb-6 md:mb-12 md:mt-8 px-2 md:px-10"> For Partnerhip & Sponsorship</p>
-      <section data-aos="fade-up" class="mx-10 md:mx-20 px-8 py-8 bg-white rounded-lg">
+      <p class="text-sm text-center md:text-base mt-3 mb-6 md:mb-12 md:mt-8 px-2 md:px-10"> For Partnerhip & Sponsorship</p>
+      <section data-aos="fade-up" class="mx-10 md:mx-44 px-8 py-8 bg-white rounded-lg">
         <div class=" ">
           <form class="  " action="https://formspree.io/f/xeoalkll" method="POST" style="width: ">
             <!--<label class="inline-block text-sm md:text-3xl font-semibold text-justify justify-between text-black hover:border-yellow-500" style="">      </label>-->
             <div class="flex items-center justify-center">
-              <input class="shadow-lg  py-2.5 px-2 md:px-4 border-1 text-black border-gray-300 inline-block text-sm md:text-2xl" type="email" name="email" placeholder="your@email.com" style="width: 90vw; height:7vh">
+              <input class="shadow-lg  py-2.5 px-2 md:px-4 border-1 text-black border-gray-300 inline-block text-sm md:text-base" type="email" name="email" placeholder="your@email.com" style="width: 90vw; height:7vh">
             </div>
            <!-- <label class="inline-block mt-5 text-sm md:text-3xl flex text-black items-center justify-between font-semibold">   </label>-->
             <div class="flex items-center justify-center mt-5 md:mt-10">
-              <textarea class="bg-white p-2 text-black text-sm md:text-2xl border-1 border-gray-300" placeholder="your message here" name="message" style="height: 32vh; width: 90vw"></textarea>
+              <textarea class="bg-white p-2 text-black text-sm md:text-base border-1 border-gray-300" placeholder="your message here" name="message" style="height: 32vh; width: 90vw"></textarea>
             </div>
             <!-- your other form fields go here -->
             <div class="flex items-center justify-center">
@@ -705,7 +701,6 @@
             </div>
           </form>
         </div>
-
       </section>
     </main>
 
@@ -714,11 +709,11 @@
     <footer class="header-bg py-14 px-3">
       <article class="md:grid grid-cols-3 grid-span-2">
         <div class="">
-          <h2 class="text-white text-xl md:text-4xl font-bold mb-2.5 "> About Us </h2>
+          <h2 class="text-white text-xl md:text-xl font-bold mb-2.5 "> About Us </h2>
           <hr class="bg-gray-400 h-1 font-bold w-9 ">
-          <p class="text-sm md:text-2xl font-light text-white tracking-tight mt-8 text-justify"> Solace Chambers is a student-based Chambers domiciled in the Faculty of Law, Bayero University, Kano (BUK). The Chambers is committed to equipping student-members with the prerequisite skills of legal research, legal writing, moot court advocacy, career development, among others. </p>
+          <p class="text-sm md:text-base font-light text-white tracking-tight mt-5 text-justify"> Solace Chambers is a student-based Chambers domiciled in the Faculty of Law, Bayero University, Kano (BUK). The Chambers is committed to equipping student-members with the prerequisite skills of legal research, legal writing, moot court advocacy, career development, among others. </p>
           <!-- social handles-->
-          <div class="mt-9 md:mt-8 text-4xl md:text-5xl tracking-widest">
+          <div class="mt-9 md:mt-8 text-4xl md:text-2xl tracking-widest">
             <a href="https://www.facebook.com/profile.php?id=100092506571508" class="text-white hover:text-blue-600" target="_blank" rel="noopener" title="Facebook" class="pr-4"> <i class="fab fa-facebook "></i></a>
             <a href="https://www.instagram.com/solace_chambers_buk/" class="text-white hover:text-pink-600 pr-4" target="_blank" rel="noopener" title="Instagram"> <i class="fab fa-instagram "></i></a>
             <a href="https://www.linkedin.com/company/solace-chambers-bayero-university-kano/" class="text-white hover:text-blue-600 pr-4" target="_blank" rel="noopener" title="LinkedIn"> <i class="fab fa-linkedin "></i></a>
@@ -728,28 +723,27 @@
 
         <!-- quick links-->
         <div class="mt-12 md:mt-0 md:pl-8">
-          <h2 class="text-white text-xl md:text-4xl font-bold mb-2.5 "> Quick Links </h2>
+          <h2 class="text-white text-xl md:text-xl font-bold mb-2.5 "> Quick Links </h2>
           <hr class="bg-gray-400 h-1 font-bold w-9 ">
           <div class="md: leading-20">
-            <a href="" class="block text-sm md:text-2xl text-white mt-5 font-light"> Home</a>
-            <a href="about.html" class="block text-sm md:text-2xl text-white mt-5 font-light"> About us</a>
-            <a href="programs.html" class="block text-sm md:text-2xl text-white mt-5 font-light"> Programs and Initiatives</a>
-            <a href="legalbit.html" class="block text-sm md:text-2xl text-white mt-5 font-light">Weekly Legal Bit </a>
-            <a href="poetrylines.html" class="block text-sm md:text-2xl text-white mt-5 font-light"> Poetry Lines </a>
-            <a href="news.html" class="block text-sm md:text-2xl text-white mt-5 font-light"> News & Updates </a>
-            <a href="#contact" class="block text-sm md:text-2xl text-white mt-5 font-light"> Contact </a>
+            <a href="#" class="block text-sm md:text-base text-white mt-5 font-light"> Home</a>
+            <a href="about.html" class="block text-sm md:text-base text-white mt-5 font-light"> About us</a>
+            <a href="programs.html" class="block text-sm md:text-base text-white mt-5 font-light"> Programs and Initiatives</a>
+            <a href="legalbit.html" class="block text-sm md:text-base text-white mt-5 font-light">Weekly Legal Bit </a>
+            <a href="poetrylines.html" class="block text-sm md:text-base text-white mt-5 font-light"> Poetry Lines </a>
+            <a href="news.html" class="block text-sm md:text-base text-white mt-5 font-light"> News & Updates </a>
+            <a href="#contact" class="block text-sm md:text-base text-white mt-5 font-light"> Contact </a>
           </div>
         </div>
-
 
         <!--</div>-->
         <!-- Get in touch-->
         <div class="mt-12 md:mt-0  text-white">
-          <h2 class="text-white text-xl md:text-2xl font-bold mb-2.5 "> Get in Touch </h2>
+          <h2 class="text-white text-xl md:text-xl font-bold mb-2.5 "> Get in Touch </h2>
           <hr class="bg-gray-400 h-1 font-bold w-9 ">
           <!-- address-->
           <div class="text-sm md:text-base flex mt-5">
-            <div class=""> <i class="fas fa-location text-white text-3xl "> </i></div>
+            <div class=""> <i class="fas fa-location text-white text-3xl md:text-2xl"> </i></div>
             <div class="">
               <h5 class="pl-5 font-bold"> Address: </h5>
               <p class="pl-5 font-light"> Faculty of Law, Bayero University, Kano</p>
@@ -757,35 +751,33 @@
           </div>
           <!-- phone Number-->
           <div class="text-sm md:text-base flex mt-5">
-            <div class=""> <i class="fas fa-phone text-white text-3xl "> </i></div>
+            <div class=""> <i class="fas fa-phone text-white text-3xl md:text-2xl"> </i></div>
             <div class="">
               <h5 class="pl-5 font-bold"> Phone Number: </h5>
               <tel class="pl-5 font-light"> (+234) 903 707 4761</tel>
             </div>
           </div>
           <!-- phone Number-->
-          <div class="text-sm md:text-2xl flex mt-5">
-            <div class=""> <i class="fas fa-envelope text-white text-3xl "> </i></div>
+          <div class="text-sm md:text-base flex mt-5">
+            <div class=""> <i class="fas fa-envelope text-white text-3xl md:text-2xl"> </i></div>
             <div class="">
               <h5 class="pl-5 font-bold"> Email: </h5>
-              <p class="pl-5 md:text-lg font-light"> solacechambersbuk01@gmail.com</p>
+              <p class="pl-5 md:text-base font-light"> solacechambersbuk01@gmail.com</p>
             </div>
           </div>
-
         </div>
         </div>
-
 
       </article>
       <!-- horizontal line-->
-      <div class="px-8 my-14">
+      <div class="px-8 my-14 md:my-">
         <hr style="background-color: " class="bg-gray-800 font-light ">
       </div>
 
 
       <!-- newsletter -->
       <div class="px-4">
-        <h4 class="uppercase text-white text-center text-base md:text-2xl mt-5 font-bold"> sign up for our newsletter</h4>
+        <h4 class="uppercase text-white text-center text-base md:text-xl mt-5 font-bold"> sign up for our newsletter</h4>
         <p class="mt-1 text-sm md:text-base text-center font-light text-white">Stay up to date with our Weekly Legal Bit, News & Updatew and Poetry Lines </p>
       </div>
       <form action="subscribe.php" method="post" class=" mt-3 px-4 ">
@@ -797,7 +789,7 @@
         </div>
       </form>
       <!-- copyright-->
-      <div class="mt-10 md:mt-20 text-gray-400 text-center px-2 md:px-5 text-sm md:text-base font-normal">
+      <div class="mt-10 md:mt-12 text-gray-400 text-center px-2 md:px-5 text-sm md:text-base font-normal">
         <p class=" text-center"> Solace Chambers, BUK <i class="fab fa-at"> </i> <span class="" id="copyright-year"></span> </p>
         <p class=""> All Rights Reserved</p>
         <p class=""> Designed by <a href="https://wa.me/2349037074761?text=Hello!" class="text-white font-light"> Al-Qosim </a></p>
@@ -820,13 +812,10 @@
       }, );
 
 
-
-
       //new js
       var images = ["https://i.ibb.co/N1BWd8M/IMG-20230720-WA0035.jpg", "https://i.ibb.co/S7BNykMS/IMG-20240211-WA0011.jpg", "https://i.ibb.co/VCLVG94/IMG-20230720-WA0032.jpg", "https://i.ibb.co/nQz9xyN/IMG-20230720-WA0031.jpg", "https://i.ibb.co/wBdM8QQ/IMG-20230720-WA0030.jpg", "https://i.ibb.co/s2qVkzn/IMG-20230720-WA0028.jpg"]; // Array of image URLs
       var slider = document.getElementById("slider");
       var currentIndex = 0;
-
       function changeBackgroundImage() {
         slider.style.backgroundImage = "url(" + images[currentIndex] + ")";
         currentIndex = (currentIndex + 1) % images.length;
@@ -837,5 +826,4 @@
     <!-- <script src="./js/blog.js"></script> -->
     <script src="./js/playground.js"></script>
 </body>
-
 </html>
